Fixed minor typos

--- a/qsDat/qsDat.org
+++ b/qsDat/qsDat.org
@@ -1,5 +1,5 @@
 #+begin_export latex
-\section{Introduction}
+\section{Real Data}
 Introduction to query/subject with data.
 #+end_export
 #+begin_src sh <<qsDat.sh>>=
