--- a/doc/ref.bib
+++ b/doc/ref.bib
@@ -78,3 +78,61 @@
   volume = 	 479,
   pages = 	 {1441--1454}}
 
+@Book{don16:go,
+  author = 	 {Donovan, A. A. A. and Kernighan, B. W.},
+  title = 	 {The Go Programming Language},
+  publisher = 	 {Addison-Wesley},
+  year = 	 2016,
+  address = 	 {New York}}
+
+@Article{vie25:fas,
+  author = 	 {Vieira Mourato, B. and Haubold, B.},
+  title = 	 {Fast detection of unique genomic regions},
+  journal = 	 {Computational and Structural Biotechnology Journal},
+  year = 	 2025,
+  volume = 	 {in preparation}}
+
+@Article{	  alt90:bas,
+  author	= {Altschul, S. F. and Gish, W. and Miller, W. and Myers, E.
+		  W. and Lipman, D. J.},
+  title		= {Basic local alignment search tool},
+  journal	= {Journal of Molecular Biology},
+  year		= 1990,
+  key		= {L3},
+  volume	= 215,
+  pages		= {403-410}
+}
+
+@Article{	  alt97:gap,
+  author	= {Altschul, S. F. and Madden , T. L. and Sch\"affer, A. A.
+		  and Zhang, J. and Zhang, Z. and Miller, W. and Lipman, D.},
+  title		= {Gapped BLAST and PSI-BLAST: a new generation of protein
+		  database search programs},
+  journal	= {Nucleic Acids Research},
+  year		= 1997,
+  key		= {L12},
+  volume	= 25,
+  pages		= {3389-3402}
+}
+
+@Article{	  ken02:bla,
+  author	= {Kent, W. J.},
+  title		= {{BLAT}---The {BLAST}-like alignment tool},
+  journal	= {Genome Research},
+  year		= 2002,
+  key		= 641,
+  volume	= 12,
+  pages		= {656-664}
+}
+
+@Article{	  sch03:hum,
+  author	= {Schwartz, S. and Kent, W. J. and Smit, A. and Zhang, Z.
+		  and Baertsch, R. and Hardison, R. C. and Haussler, D. and
+		  Miller, W.},
+  title		= {Human-mouse alignments with {BLASTZ}},
+  journal	= {Genome Research},
+  year		= 2003,
+  key		= 722,
+  volume	= 13,
+  pages		= {103-107}
+}
