--- a/qsSim/coaNames.tex
+++ b/qsSim/coaNames.tex
@@ -1,12 +1,12 @@
-\psfrag{ t1}{$q_1$}
-\psfrag{ t2}{$q_2$}
-\psfrag{ t3}{$q_3$}
-\psfrag{ t4}{$q_4$}
-\psfrag{ t5}{$q_5$\rput(-3,0.4){$Q$}}
-\psfrag{ n1}{$s_1$}
-\psfrag{ n2}{$s_2$}
-\psfrag{ n3}{$s_3$}
-\psfrag{ n4}{$s_4$}
-\psfrag{ n5}{$s_5$\rput(-3,0.55){$S$}}
-\psfrag{ n6}{$s_6$}
-\psfrag{ n7}{$s_7$}
+\psfrag{ t1}{$t_1$}
+\psfrag{ t2}{$t_2$}
+\psfrag{ t3}{$t_3$}
+\psfrag{ t4}{$t_4$}
+\psfrag{ t5}{$t_5$\rput(-3,0.4){$T$}}
+\psfrag{ n1}{$n_1$}
+\psfrag{ n2}{$n_2$}
+\psfrag{ n3}{$n_3$}
+\psfrag{ n4}{$n_4$}
+\psfrag{ n5}{$n_5$\rput(-3,0.55){$N$}}
+\psfrag{ n6}{$n_6$}
+\psfrag{ n7}{$n_7$}
