--- a/doc/header.tex
+++ b/doc/header.tex
@@ -43,6 +43,7 @@
 \usepackage[straightquotes]{newtxtt}
 \bibliographystyle{plain}
 
+\usepackage{graphicx}
 
 \usepackage{colortbl}
     \newcommand{\cell}[4]{%
