--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -11,12 +11,11 @@ that allow convenient detection of unique regions in large genomes
 like those of mammals, or from large samples of bacerial genomes. And
 none of these tools is as established as one of the popular aligners.
 
-In this repository we survey four published tools for finding unique
-regions, \ty{genmap}~\cite{poc20:gen}, \ty{macle}~\cite{pir19:hig},
-\ty{kec}~\cite{ber21:kec}, and \ty{fur}~\cite{hau21:fur,vie24:mar}, by
-applying them so simulated and real data. This repository accompanies
-a forthcoming review on searching for unique regions in genome
-sequences~\cite{vie25:fas}.
+In this repository we survey three published tools for finding unique
+regions, \ty{genmap}~\cite{poc20:gen}, \ty{macle}~\cite{pir19:hig}
+and \ty{fur}~\cite{hau21:fur,vie24:mar}, by applying them so simulated
+and real data. This repository accompanies a forthcoming review on
+searching for unique regions in genome sequences~\cite{vie25:fas}.
 
 We occasionally mention data on resource consumption, which refer to
 runs under Ubuntu 24.04 on WSL for Windows11 on a consumer-grade
